elimine imagenes no utilizadas

--- a/src/Style/stylelogin.css
+++ b/src/Style/stylelogin.css
@@ -11,7 +11,7 @@
 
 body {
   /* buscar la carpeta de la imagen */
-  background: url(../../assets/imgs/carnes5.jpg);
+  background: url(../assets/imgs/carnes5.jpg);
 
   /* controlar el tamaño de la imagen */
 
