Feat:Agregando footer y navbar al menu

--- a/src/Style/stylenavbar.css
+++ b/src/Style/stylenavbar.css
@@ -28,11 +28,11 @@
 
 .styleohome {
     text-decoration: none;
-    color          : white;
+    color          : rgb(14, 12, 12);
 }
 
 .p2 {
     margin-left: 80px;
-    color      : white;
+    color      : rgb(7, 6, 6);
     font-size  : 30px;
 }
