--- a/src/Style/stylerestorePassword.css
+++ b/src/Style/stylerestorePassword.css
@@ -6,10 +6,10 @@
 .generalraiz {
 
     width : 100%;
-    border: 1px solid black;
+   
 }
 
-.general {
+.generalg {
     display        : grid;
     justify-content: center;
     align-content  : center;
