--- a/src/Style/stylehome.css
+++ b/src/Style/stylehome.css
@@ -1,100 +1,114 @@
+:root {
+  --style-font-famyli: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --style-font-wheit: bold;
+  --style-font-size:25px;
+}
+
+* {
+  padding: 0px;
+  margin : 0px;
+}
+
 .Bodycont {
-  padding: 40px;
-  display: grid;
+  padding           : 40px;
+  display           : grid;
   grid-template-rows: repeat(3, 1fr);
 }
 
 .Bodycontitle {
   padding: 40px;
 
-  font-size: 35px;
-  color: rgba(17, 17, 17, 0.966);
-  display: grid;
+  font-size      : 35px;
+  color          : rgba(17, 17, 17, 0.966);
+  display        : grid;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  align-items    : center;
+  text-align     : center;
+  font-family    : var(--style-font-famyli);
 }
 
 .sub {
-  font-family: cursive;
-  font-size: 18px;
+  font-family: var(--style-font-famyli);
+  font-size  : 18px;
 }
 
 .BodycontText {
-  width: 800px;
+  width : 800px;
   margin: 0 auto;
 
-  color: white;
-  display: grid;
-  text-align: center;
+
+  display        : grid;
+  text-align     : center;
   justify-content: center;
-  align-items: center;
-  align-content: center;
+  align-items    : center;
+  align-content  : center;
 }
 
 .contenido {
-  font-family: Arial;
-  font-size: 16px;
+  font-family: var(--style-font-famyli);
+  font-size  : var(--style-font-size);
+
+  font-weight: var(--style-font-wheit);
 }
 
 .BodyButton {
-  font-weight: bold;
-  display: flex;
+  font-weight    : bold;
+  display        : flex;
   justify-content: center;
+
 }
 
 .ButtonFind {
-  color: #ffffff;
-  background: orange;
-  height: 50px;
-  width: 100px;
+  color        : black;
+  background   : rgba(235, 233, 229, 0.753);
+  height       : 50px;
+  width        : 100px;
   border-radius: 25px;
-  text-shadow: 1px 1px #fff;
+  text-shadow  : 1px 1px #fff;
+  font-family  : var(--style-font-famyli);
 }
 
 .ButtonFind:hover {
   background: orange;
-  color: #ffffff;
+  color     : #ffffff;
 }
 
 .image {
   text-align: center;
-  width: auto;
+  width     : auto;
 
   overflow: hidden;
 }
 
 .containerh1 {
-  padding-top: 20px;
+  padding-top   : 20px;
   padding-bottom: 20px;
-  text-align: center;
-  font-family: cursive;
-  font-size: 30px;
-  font-weight: bold;
-  height: 0;
+  text-align    : center;
+  font-family   : var(--style-font-famyli);
+  font-size     : 30px;
+  font-weight   : bold;
+  margin: 20px;
 }
 
 .containeretiqueteP {
-  display: flex;
+  display        : flex;
   justify-content: center;
 }
 
 .containeretiquetePp {
-  padding: 20px;
-  width: 750px;
-  text-align: center;
-  font: condensed 120% sans-serif;
-  line-height: 1.5em;
-  font-family: Arial;
+  font-size: var(--style-font-size);
+  font-family: var(--style-font-famyli);
+  font-weight: var(--style-font-wheit);
 }
 
 .containerimagesCarnes {
   max-height: 600px;
-
-  display: grid;
+  margin: 20px;
+  display              : grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
-  align-items: center;
+  justify-items        : center;
+  align-items          : center;
 }
 
 .containerimagesCarnesip {
@@ -102,30 +116,31 @@
 }
 
 .containerimagesCarnesipimg {
-  border: 2px solid black;
-  margin-left: auto;
+  border      : 2px solid black;
+  margin-left : auto;
   margin-right: auto;
-  height: 270px;
-  width: 280px;
+  height      : 270px;
+  width       : 280px;
 }
 
 .containerimagesCarnesipEp {
   padding-top: 20px;
-  text-align: center;
-  font: condensed 120% sans-serif;
+  text-align : center;
+
   line-height: 1.5em;
-  font-family: cursive;
-  font-size: 18px;
+  font-family: var(--style-font-famyli);
+  font-size  : 18px;
   font-weight: bold;
 }
 
 .containerconctato {
-  height: 200px;
-  padding-top: 20px;
-  display: grid;
+  margin-top: 20px;
+  height               : 200px;
+  padding-top          : 20px;
+  display              : grid;
   grid-template-columns: 35% 35% 35%;
-  justify-items: center;
-  align-items: center;
+  justify-items        : center;
+  align-items          : center;
 }
 
 .containerconctatologo {
@@ -133,15 +148,15 @@
 }
 
 .containerconctatologoLp {
-  display: list-item;
-  padding-top: 20px;
+  display       : list-item;
+  padding-top   : 20px;
   padding-bottom: 20px;
-  text-align: center;
-  font: condensed 120% sans-serif;
-  line-height: 1.5em;
-  font-family: cursive;
-  font-size: 18px;
-  font-weight: bold;
+  text-align    : center;
+  font          : condensed 120% sans-serif;
+  line-height   : 1.5em;
+  font-family   : cursive;
+  font-size     : 18px;
+  font-weight   : bold;
 }
 
 .containerconctatologolog {
@@ -149,6 +164,10 @@
 }
 
 .welcome {
-  font: oblique bold 80px cursive;
-  font-size: 60px;
+  font       : oblique bold 80px cursive;
+  font-size  : 60px;
+  color      : black;
+  font-weight: bold;
+  font-family: var(--style-font-famyli);
+
 }
