--- a/src/Style/stylelogin.css
+++ b/src/Style/stylelogin.css
@@ -1,5 +1,10 @@
 /* poner margenes */
 
+:root{
+  --style-font:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,8 +23,7 @@ body {
   background-size: initial;
   background-size: cover;
   background-attachment: fixed;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: var(--style-font);
 }
 
 .contenedor-form {
@@ -52,6 +56,13 @@ body {
   cursor: pointer;
 }
 
+.link-toggle{
+  color: black;
+  font-family: var(--style-font);
+  list-style: none;
+  font-weight: bolder;
+}
+
 .contenedor-form .toggle span {
   letter-spacing: 1px;
 }
@@ -75,7 +86,7 @@ body {
   outline: none;
   background: rgba(245, 237, 237, 0.973);
   display: block;
-  width: 100%;
+  width: 290px;
   padding: 10px 15px;
   color: rgb(85, 75, 75);
   border: none;
@@ -105,15 +116,18 @@ h2{
 }
 
 .reset-pastword {
-  background-color: rgba(255, 228, 196, 0.205);
+  background-color: rgba(255, 228, 196, 0);
   border: 2px;
+  
+}
 
-}
-p {
-  font-weight: bolder;
-}
+
+
+
 
 .logo {
+  display: flex;
+  justify-content: center;
   font-size: 30px;
 }
 
@@ -128,9 +142,20 @@ p {
   margin-top:15px ;
 }
 
-input {
+.inputlogin {
   color: black;
-  
+
   border-radius: 20px;
   margin-top: 20px;
+}
+
+.pastword-p{
+  font-family: var(--style-font);
+  font-weight: bolder;
+  color:black;
+}
+
+.form-h1{
+  text-align: center;
+  font-family: var(--style-font);
 }
