estilos actualizados ,nueva vista de productos

--- a/src/PagesLogueado/Style/styleNavbar.css
+++ b/src/PagesLogueado/Style/styleNavbar.css
@@ -5,19 +5,19 @@
 
 .Header {
     display              : grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 30% 70%;
     height: 320px;
     margin-bottom:15px;
     padding: 20px;
  
 }
 
-.Headertitlebos {
+.Headertitlebost {
     padding    : 20px;
     display    : grid;
     align-items: center;
     font-size  : 30px;
-    color      : white;
+  
     
     
 }
@@ -40,9 +40,9 @@
 } */
 
 .p2 {
-    margin-left: 125px;
+    margin-left: 60px;
     color      : rgb(7, 6, 6);
-    font-size  : 30px;
+    font-size  : 90px;
     font-family: cursive;
 }
 
@@ -56,8 +56,8 @@ a{
 
 .HeaderNavList{
     margin: auto;
-    width: 720px;
-    
+    width: 920px;
+    border: 1px solid black;
     
 }
 
@@ -71,6 +71,7 @@ ul,ol{
     text-decoration: none;
     padding: 10px 15px;
     display: block;
+    font-size: 25px;
 }
 
 .unavbar li a:hover{
