--- a/src/Style/stylenavbar.css
+++ b/src/Style/stylenavbar.css
@@ -70,6 +70,7 @@ ul,ol{
     color:rgba(26, 23, 23, 0.932);
     text-decoration: none;
     padding: 10px 15px;
+    font-size: 25px;
     display: block;
 }
 
