--- a/src/Style/stylehome.css
+++ b/src/Style/stylehome.css
@@ -28,9 +28,11 @@
   font-family    : var(--style-font-famyli);
 }
 
-.sub {
+.image-sub {
   font-family: var(--style-font-famyli);
   font-size  : 18px;
+  text-align: center;
+  font-weight: var(--style-font-wheit);
 }
 
 .BodycontText {
