--- a/src/PagesLogueado/Style/stylehomeL.css
+++ b/src/PagesLogueado/Style/stylehomeL.css
@@ -1,11 +1,16 @@
+:root {
 
-:root{
+    --style-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-        --style-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    --styele-font-wheit: bold;
 
-        --styele-font-wheit:bold;
-      
+    --height-icons: 100px;
+
+    --margin-logo: 55px;
+
+    --padding-logo: 25px;
+
 }
 
 
@@ -17,22 +22,32 @@
 .homegeneral {
     border: 1px solid black;
     width : 100%;
-    height: 742px;
+    height: 942px;
+
 }
 
-.text-p{
+.text-div {
+    display        : flex;
+    width          : 100%;
+    justify-content: center;
+    align-content  : center;
+
+}
+
+.text-p {
     font-family: var(--style-font-family);
     font-weight: var(--styele-font-wheit);
-    margin: 15px;
-    font-size:22px;
+
+    font-size : 22px;
     text-align: center;
-    width: 100%;
+    width     : 45%;
+    padding   : 15px;
 }
 
 .carousel-img {
-    width       : 215px;
-    height      : 215px;
-    margin-top  : 20px;
+    width : 215px;
+    height: 215px;
+
     margin-left : auto;
     margin-right: auto;
 }
@@ -60,12 +75,63 @@ li {
 }
 
 .carousel-p {
-    color: rgb(12, 12, 12);
-    text-align: center;
-    width     : 100%;
-    height    : 80px;
+    
+    text-align : center;
+    width      : 100%;
+    height     : 80px;
     font-family: var(--style-font-family);
     font-weight: var(--styele-font-wheit);
-    font-size: 15px;
+    font-size  : 25px;
 }
 
+.general-iconos {
+    display        : flex;
+    width          : 100%;
+    justify-content: center;
+  
+
+
+}
+
+.iconosfacebook {
+    margin   : var(--margin-logo);
+    padding  : var(--padding-logo);
+    font-size: var(--height-icons);
+    /* border: 1px solid rgba(0, 0, 255, 0.486); */
+    color    : blue;
+}
+
+.iconoswhatsapp {
+    margin   : var(--margin-logo);
+    padding  : var(--padding-logo);
+    font-size: var(--height-icons);
+    /* border: 1px solid rgba(0, 128, 0, 0.61); */
+    color    : green;
+}
+
+.iconosinstagram {
+    margin   : var(--margin-logo);
+    padding  : var(--padding-logo);
+    font-size: var(--height-icons);
+    /* border: 1px solid rgba(255, 0, 0, 0.527); */
+    color    : red;
+}
+
+.general-p {
+  
+    width          : 100%;
+    display        : flex;
+    justify-content: center;
+    align-content  : center;
+
+}
+
+.p-p {
+    font-family: var(--style-font-family);
+    font-weight: var(--styele-font-wheit);
+
+    font-size : 22px;
+    text-align: center;
+    width     : 45%;
+    padding   : 15px;
+}
