--- a/src/PagesLogueado/Style/styleNavbar.css
+++ b/src/PagesLogueado/Style/styleNavbar.css
@@ -1,25 +1,24 @@
 * {
-    padding: 0;
-    margin : 0;
+  padding: 0;
+  margin: 0;
 }
 
 .Header {
-    display              : grid;
-    grid-template-columns: 30% 70%;
-    height: 320px;
-    margin-bottom:15px;
-    padding: 20px;
- 
+  display: flex;
+  align-items: flex-start;
+  grid-template-columns: 50% 70%;
+  height: 200px;
+  margin-bottom: 15px;
+  padding: 20px;
 }
 
 .Headertitlebost {
-    padding    : 20px;
-    display    : grid;
-    align-items: center;
-    font-size  : 30px;
-  
-    
-    
+  display: flex;
+  align-items: flex-start;
+  padding: 20px;
+  display: grid;
+  align-items: center;
+  font-size: 30px;
 }
 
 /* .HeaderNavList {
@@ -39,56 +38,85 @@
     
 } */
 
-.p2 {
-    margin-left: 60px;
-    color      : rgb(7, 6, 6);
-    font-size  : 90px;
-    font-family: cursive;
+/* .p2 {
+  margin-left: 60px;
+  color: rgb(7, 6, 6);
+  font-size: 60px;
+  font-family: cursive;
+  text-align: center;
+} */
+
+a {
+  color: rgb(14, 12, 12);
+  font-family: cursive;
+  margin: px;
+  font-weight: bold;
+  font-size: 18px;
 }
 
-a{
-    color          : rgb(14, 12, 12);
-    font-family: cursive;
-    margin: 5px;
-    font-weight: bold;
-    font-size  : 18px;
+.HeaderNavList {
+  width: 920px;
+  margin: auto;
 }
 
-.HeaderNavList{
-    margin: auto;
-    width: 920px;
-   
-    
+ul,
+ol {
+  list-style: none;
 }
 
-ul,ol{
-    list-style: none;
+.unavbar {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: red;
 }
 
-.unavbar li a{
-    background-color:white ;
-    color: black;
-    text-decoration: none;
-    padding: 10px 15px;
-    display: block;
-    font-size: 25px;
+.unavbar li a {
+  background-color: #fff;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  padding: 10px 15px;
+  display: block;
+  font-size: 20px;
 }
 
-.unavbar li a:hover{
-    background-color:rgba(236, 215, 215, 0.774) ;
+.unavbar > li > a {
+  height: 90px;
 }
 
-.unavbar > li{
-    float: left;
+.unavbar li a:hover {
+  background-color: rgba(236, 215, 215, 0.774);
 }
 
-.unavbar li ul{
-    display: none;
-    position: absolute;
-    min-width: 140px;
+.unavbar > li {
+  float: left;
 }
 
-.unavbar li:hover >ul{
-    display: block;
-    
+.unavbar li ul {
+  display: none;
+  position: absolute;
+  min-width: 140px;
+}
+
+.unavbar li:hover > ul {
+  display: block;
+}
+
+.Headertitlebost {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: black;
+}
+
+.conlogin {
+  display: flex;
+  align-self: flex-end;
+  background-color: red;
+}
+
+.logomenu {
+  display: block;
+  margin: 0 auto;
 }
