--- a/src/PagesLogueado/Style/stylehomeL.css
+++ b/src/PagesLogueado/Style/stylehomeL.css
@@ -1,137 +1,124 @@
 :root {
+  --style-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-    --style-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --styele-font-wheit: bold;
 
-    --styele-font-wheit: bold;
+  --height-icons: 100px;
 
-    --height-icons: 100px;
+  --margin-logo: 55px;
 
-    --margin-logo: 55px;
-
-    --padding-logo: 25px;
-
+  --padding-logo: 25px;
 }
 
-
 * {
-    padding: 0px;
-    margin : 0px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .homegeneral {
-    border: 1px solid black;
-    width : 100%;
-    height: 942px;
-
+  width: 100%;
+  height: 942px;
 }
 
 .text-div {
-    display        : flex;
-    width          : 100%;
-    justify-content: center;
-    align-content  : center;
-
+  background-color: red;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-content: center;
+  align-self: flex-end;
 }
 
 .text-p {
-    font-family: var(--style-font-family);
-    font-weight: var(--styele-font-wheit);
+  font-family: var(--style-font-family);
+  font-weight: var(--styele-font-wheit);
 
-    font-size : 22px;
-    text-align: center;
-    width     : 45%;
-    padding   : 15px;
+  font-size: 22px;
+  text-align: center;
+  width: 45%;
+  padding: 15px;
 }
 
 .carousel-img {
-    width : 215px;
-    height: 215px;
+  width: 215px;
+  height: 215px;
 
-    margin-left : auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ant-carousel .slick-slide {
-    height        : 360px;
-    line-height   : 160px;
-    /* background : #364d79; */
-    overflow      : hidden;
-
+  height: 360px;
+  line-height: 160px;
+  /* background : #364d79; */
+  overflow: hidden;
 }
 
-
-
 li {
-    background-color: black;
+  background-color: black;
 }
 
 .slick-slide .slick-active {
-    background-color: orange;
+  background-color: orange;
 }
 
 .ant-carousel .slick-dots li.slick-active button {
-    background-color: rgb(12, 12, 12);
+  background-color: rgb(12, 12, 12);
 }
 
 .carousel-p {
-    
-    text-align : center;
-    width      : 100%;
-    height     : 80px;
-    font-family: var(--style-font-family);
-    font-weight: var(--styele-font-wheit);
-    font-size  : 25px;
+  text-align: center;
+  width: 100%;
+  height: 80px;
+  font-family: var(--style-font-family);
+  font-weight: var(--styele-font-wheit);
+  font-size: 25px;
 }
 
 .general-iconos {
-    display        : flex;
-    width          : 100%;
-    justify-content: center;
-  
-
-
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 .iconosfacebook {
-    margin   : var(--margin-logo);
-    padding  : var(--padding-logo);
-    font-size: var(--height-icons);
-    /* border: 1px solid rgba(0, 0, 255, 0.486); */
-    color    : blue;
+  margin: var(--margin-logo);
+  padding: var(--padding-logo);
+  font-size: var(--height-icons);
+  /* border: 1px solid rgba(0, 0, 255, 0.486); */
+  color: blue;
 }
 
 .iconoswhatsapp {
-    margin   : var(--margin-logo);
-    padding  : var(--padding-logo);
-    font-size: var(--height-icons);
-    /* border: 1px solid rgba(0, 128, 0, 0.61); */
-    color    : green;
+  margin: var(--margin-logo);
+  padding: var(--padding-logo);
+  font-size: var(--height-icons);
+  /* border: 1px solid rgba(0, 128, 0, 0.61); */
+  color: green;
 }
 
 .iconosinstagram {
-    margin   : var(--margin-logo);
-    padding  : var(--padding-logo);
-    font-size: var(--height-icons);
-    /* border: 1px solid rgba(255, 0, 0, 0.527); */
-    color    : red;
+  margin: var(--margin-logo);
+  padding: var(--padding-logo);
+  font-size: var(--height-icons);
+  /* border: 1px solid rgba(255, 0, 0, 0.527); */
+  color: red;
 }
 
 .general-p {
-  
-    width          : 100%;
-    display        : flex;
-    justify-content: center;
-    align-content  : center;
-
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .p-p {
-    font-family: var(--style-font-family);
-    font-weight: var(--styele-font-wheit);
+  font-family: var(--style-font-family);
+  font-weight: var(--styele-font-wheit);
 
-    font-size : 22px;
-    text-align: center;
-    width     : 45%;
-    padding   : 15px;
+  font-size: 22px;
+  text-align: center;
+  width: 45%;
+  padding: 15px;
 }
