--- a/src/Style/stylelogin.css
+++ b/src/Style/stylelogin.css
@@ -98,11 +98,14 @@ body {
   justify-content: center;
   justify-items: center;
   align-content: center;
-  background-color: rgba(117, 190, 190, 0.712);
-
-
   width: 100%;
   height: 650px;
+}
+
+
+.subcolor{
+  padding: 400px;
+  
 }
 
 h1 {
@@ -120,10 +123,6 @@ h2{
   border: 2px;
   
 }
-
-
-
-
 
 .logo {
   display: flex;
@@ -159,3 +158,19 @@ h2{
   text-align: center;
   font-family: var(--style-font);
 }
+
+/* .logologin{
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  border: black 1px solid;
+
+} */
+
+.logologin{
+  position:absolute;
+  bottom:480px;
+  right:570px;
+
+}
+
