--- a/src/PagesLogueado/Style/styleregisterproducts.css
+++ b/src/PagesLogueado/Style/styleregisterproducts.css
@@ -1,3 +1,13 @@
+:root {
+    --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+    --Backgroudn-style-color:rgba(247, 242, 242, 0.555);
+
+    
+}
+
+
 .titlerp 
 {justify-content: center;
 text-align: center;
@@ -10,6 +20,11 @@ margin: 12px;}
     width: 500px;  
    
 }
+
+.registre{
+    font-family: var(--Style-font-famili);
+}
+
 
 .rul{
     display: flex;
