--- a/src/PagesLogueado/Style/styleNavbar.css
+++ b/src/PagesLogueado/Style/styleNavbar.css
@@ -1,3 +1,10 @@
+:root {
+  --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  --Backgroudn-style-color:rgba(247, 242, 242, 0.555);   
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -119,4 +126,27 @@ ol {
 .logomenu {
   display: block;
   margin: 0 auto;
+}
+
+.titlehomelogueado{
+  font-family: var(--Style-font-famili);
+  position:absolute;
+  bottom:460px;
+  left:50px;
+}
+
+
+.toclose{
+  height       : 50px;
+  width        :120px;
+  border-radius: 40px;
+}
+
+.toclose:hover {
+  background: orange;
+  color     : #ffffff;
+}
+
+.color{
+  background-color:white;
 }
