--- a/src/PagesLogueado/Style/styleemployeslist.css
+++ b/src/PagesLogueado/Style/styleemployeslist.css
@@ -2,9 +2,7 @@
     --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-    --Backgroudn-style-color:rgba(247, 242, 242, 0.555);
-
-    
+    --Backgroudn-style-color:rgba(247, 242, 242, 0.555);   
 }
 
 .titleemployees{
@@ -24,4 +22,13 @@
     position:absolute;
     bottom:500px;
     right:900px;
+}
+
+.tab{
+
+ position:absolute;
+    bottom:80px;
+    left:200px;
+    
+    
 }
