--- a/src/PagesLogueado/Style/styleNavbar.css
+++ b/src/PagesLogueado/Style/styleNavbar.css
@@ -14,8 +14,8 @@
   display: flex;
   align-items: flex-start;
   grid-template-columns: 50% 70%;
-  height: 200px;
-  margin-bottom: 15px;
+  height: 230px;
+  margin-bottom: 86px;
   padding: 20px;
 }
 
@@ -25,7 +25,7 @@
   padding: 20px;
   display: grid;
   align-items: center;
-  font-size: 30px;
+
 }
 
 /* .HeaderNavList {
@@ -54,16 +54,21 @@
 } */
 
 a {
-  color: rgb(14, 12, 12);
-  font-family: cursive;
-  margin: px;
+  color: rgb(13, 12, 14);
+  font-family: var(--Style-font-famili);
   font-weight: bold;
-  font-size: 18px;
+  font-size: 10px;
+  height: 40px;
+ 
+  
 }
 
 .HeaderNavList {
-  width: 920px;
+  width: 1100px;
   margin: auto;
+  font-family: var(--Style-font-famili);
+
+  
 }
 
 ul,
@@ -74,7 +79,7 @@ ol {
 .unavbar {
   display: flex;
   flex-wrap: nowrap;
-  background-color: red;
+  
 }
 
 .unavbar li a {
@@ -88,7 +93,7 @@ ol {
 }
 
 .unavbar > li > a {
-  height: 90px;
+  height: 50px;
 }
 
 .unavbar li a:hover {
@@ -108,6 +113,17 @@ ol {
 .unavbar li:hover > ul {
   display: block;
 }
+
+.unavbar li ul li{
+  position: relative;
+}
+
+.unavbar li ul li ul{
+
+  right: -140px;
+  top:0px
+}
+
 
 .Headertitlebost {
   display: flex;
@@ -131,7 +147,7 @@ ol {
 .titlehomelogueado{
   font-family: var(--Style-font-famili);
   position:absolute;
-  bottom:460px;
+  bottom:440px;
   left:50px;
 }
 
