--- a/src/PagesLogueado/Style/styleproductlist.css
+++ b/src/PagesLogueado/Style/styleproductlist.css
@@ -1,34 +1,45 @@
 :root {
-    --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
-    --Backgroudn-style-color:rgba(247, 242, 242, 0.555);   
-}
-
-.titleemployees{
-    text-align : center;
-    justify-content: center;  
-}
-
-.titleemployees2{
+    --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
+    --Backgroudn-style-color: rgba(247, 242, 242, 0.555);
+  }
+  
+  .titleproducts {
+    text-align: center;
+    justify-content: center;
+  }
+  
+  .titleproducts2 {
     font-family: var(--Style-font-famili);
     justify-content: center;
-    position:absolute;
-    bottom:520px;
-    right:500px;
-}
-
-.logoemployees{
-    position:absolute;
-    bottom:500px;
-    right:900px;
-}
-
-.tab{
-
- position:absolute;
-    bottom:80px;
-    left:200px;
-    
-    
-}
+    position: absolute;
+    bottom: 520px;
+    right: 500px;
+  }
+  
+  .logoproducts {
+    position: absolute;
+    bottom: 500px;
+    right: 900px;
+  }
+  
+  .tab {
+      margin-top: 180px;
+      margin-left: 20px;
+      margin-right: 20px;
+  }
+  
+  .trends {
+    height: 40px;
+    width: 80px;
+    border-radius: 10px;
+    align-self: center;
+    margin-bottom: 20px;
+  }
+  
+  .trends:hover {
+    background: orange;
+    color: #ffffff;
+  }
+  
