--- a/src/PagesLogueado/Style/styleproductlist.css
+++ b/src/PagesLogueado/Style/styleproductlist.css
@@ -1,34 +1,44 @@
 :root {
-    --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --Style-font-famili: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-    --Backgroudn-style-color:rgba(247, 242, 242, 0.555);   
+  --Backgroudn-style-color: rgba(247, 242, 242, 0.555);
 }
 
-.titleemployees{
-    text-align : center;
-    justify-content: center;  
+.titleproducts {
+  text-align: center;
+  justify-content: center;
 }
 
-.titleemployees2{
-    font-family: var(--Style-font-famili);
-    justify-content: center;
-    position:absolute;
-    bottom:520px;
-    right:500px;
+.titleproducts2 {
+  font-family: var(--Style-font-famili);
+  justify-content: center;
+  position: absolute;
+  bottom: 520px;
+  right: 500px;
 }
 
-.logoemployees{
-    position:absolute;
-    bottom:500px;
-    right:900px;
+.logoproducts {
+  position: absolute;
+  bottom: 500px;
+  right: 900px;
 }
 
-.tab{
+.tab {
+    margin-top: 180px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
- position:absolute;
-    bottom:80px;
-    left:200px;
-    
-    
+.trends {
+  height: 40px;
+  width: 80px;
+  border-radius: 10px;
+  align-self: center;
+  margin-bottom: 20px;
+}
+
+.trends:hover {
+  background: orange;
+  color: #ffffff;
 }
