debug:arreglado inicio con registrar empresa

--- a/src/PagesLogueado/Style/styleOrderAdmin.css
+++ b/src/PagesLogueado/Style/styleOrderAdmin.css
@@ -32,3 +32,11 @@
     align-content  : center;
 
 }
+
+.contend-btn{
+    display: flex;
+    border:1px solid black;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+}
