--- a/src/Style/styleContac.css
+++ b/src/Style/styleContac.css
@@ -104,11 +104,11 @@
     color: red;
 }
 
-.titlecontact{
+/* .titlecontact{
     font-family: var(--Style-font-famili);
     position:absolute;
     bottom:370px;
     right:950px;
     
     
-}
+} */
