--- a/src/PagesLogueado/Style/styleDesactiveproducts.css
+++ b/src/PagesLogueado/Style/styleDesactiveproducts.css
@@ -31,7 +31,7 @@
    
 }
 
-.div-btn-product{
+.div-btn-descativeproduct{
  
     margin-top:-20px;   
  
@@ -45,7 +45,7 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.card-h1product{
+.card-h1-descativeproduct{
     display: flex;
     
     
