--- a/src/PagesLogueado/Style/styleuserhistory.css
+++ b/src/PagesLogueado/Style/styleuserhistory.css
@@ -19,13 +19,41 @@
   }
   
   .logohistory {
-    position: absolute;
+    position: flex;
     bottom: 500px;
     right: 900px;
+    height: 100pt;;
   }
   
   .tab2 {
-      margin-top: 180px;
-      margin-left: 20px;
-      margin-right: 20px;
+      margin-top: 10px;
+      margin-left: 140px;
+      margin-right: 140px;
   }
+
+  .return {
+    font-weight    : bold;
+    display        : flex;
+    justify-content: center;
+  
+  }
+  
+  .returnfind {
+    color        : black;
+    background   : rgba(235, 233, 229, 0.753);
+    height       : 50px;
+    width        : 100px;
+    border-radius: 25px;
+    text-shadow  : 1px 1px #fff;
+    font-family  : var(--style-font-famyli);
+    font-size: 15px;
+  }
+
+  .returnfind:hover {
+    background: orange;
+    color     : #ffffff;
+  }
+  .imagehistory{
+    padding: -10pt;
+  }
+  
