--- a/src/Style/stylehome.css
+++ b/src/Style/stylehome.css
@@ -70,6 +70,7 @@
   border-radius: 25px;
   text-shadow  : 1px 1px #fff;
   font-family  : var(--style-font-famyli);
+  font-size: 15px;
 }
 
 .ButtonFind:hover {
