--- a/src/Style/stylerestorePassword.css
+++ b/src/Style/stylerestorePassword.css
@@ -25,6 +25,9 @@
     text-align   : center;
     margin-bottom: 20px;
 
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
 
 }
 
@@ -33,13 +36,17 @@
     display        : grid;
     justify-content: center;
     background-color: rgba(231, 229, 225, 0);
+    
+
 }
 
 .generalp {
     font     : oblique bold 80px cursive;
     font-size: 14px;
 
-    margin: 20px;
+    margin: 1px;
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .generalinput {
