--- a/src/PagesLogueado/Style/styleConsultemployees.css
+++ b/src/PagesLogueado/Style/styleConsultemployees.css
@@ -12,10 +12,10 @@
   .site-card-border-less-wrapper-consultemployees {
     
    display: grid;
-    padding: 20px;
-    background: #f8f0f000;
    
-    height: 620px;
+    background: #f8f0f000;
+    justify-content: center;
+    height: 60px;
     
     
   }
@@ -34,6 +34,8 @@
 .div-btn-consultemployees{
    
     margin-top: -20px;
+    display: flex;
+    
 }
 
 .ant-card-head-title{
@@ -49,7 +51,7 @@
     
     font-size: 28pt;
    
-   text-align:center;
+    text-align:center;
     font-weight: 20px;
     font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
