--- a/src/PagesLogueado/Style/styleregisterproducts.css
+++ b/src/PagesLogueado/Style/styleregisterproducts.css
@@ -9,13 +9,12 @@
     border-radius: 16px;
   }
 
-  .site-card-border-less-wrapper-product {
+  .site-card-border-less-wrapper-product2 {
     
    display: grid;
     padding: 20px;
     background: #f8f0f000;
-   
-    height: 720px;
+    height: 20px;
     
     
   }
@@ -24,16 +23,16 @@
     }
 
 .card{
-    
+    display: flex;
     text-align: center;
     font-size: 30px;
-    margin: auto auto;
+    width: 300pt;
    
 }
 
 .div-btn-product{
  
-    margin-top:-20px;   
+    margin-top:-10px;   
  
 }
 
@@ -47,18 +46,17 @@
 
 .card-h1product{
     display: flex;
-    
-    
     font-size: 28pt;
+    margin: -10pt;
    
-   text-align:center;
+    text-align:center;
     font-weight: 20px;
     font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     
 }
 
-.div-h1-product{
+.div-h1-product2{
     
     width: 100%;
     display: grid;
@@ -67,7 +65,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    margin: 12px;
+   
 }
 
 .img{
@@ -76,3 +74,9 @@
     border-radius: 15px;
     background-color: rgb(174, 174, 177);
 }
+
+.container-data{
+    display: flex;
+    justify-content: center;
+}
+
